dist_man1_MANS=

if BUILD_LUASCOIND
  dist_man1_MANS+=luascoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=luascoin-qt.1
endif

if BUILD_LUASCOIN_CLI
  dist_man1_MANS+=luascoin-cli.1
endif

if BUILD_LUASCOIN_TX
  dist_man1_MANS+=luascoin-tx.1
endif

if ENABLE_WALLET
if BUILD_LUASCOIN_WALLET
  dist_man1_MANS+=luascoin-wallet.1
endif
endif
